Add banner + social preview

--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@
       href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&display=swap"
       rel="stylesheet"
     />
-    <title>uptask-o</title>
+    <title>uptask</title>
+    <meta name="og:title" content="uptask" />
+    <meta
+      name="og:description"
+      content="uptask is a calm and welcoming task manager for the real work."
+    />
+    <meta name="og:image" content="/banner.png" />
+    <meta
+      name="description"
+      content="uptask is a calm and welcoming task manager for the real work."
+    />
   </head>
   <body>
     <div id="root"></div>
