--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
       href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&display=swap"
       rel="stylesheet"
     />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+
+    <meta
+      name="viewport"
+      content="initial-scale=1, viewport-fit=cover, user-scalable=no"
+    />
     <title>uptask</title>
     <meta name="og:title" content="uptask" />
     <meta
