--- a/index.html
+++ b/index.html
@@ -19,10 +19,21 @@
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
     />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="theme-color"
+      content="#ffffff"
+      media="(prefers-color-scheme: light)"
+    />
+    <meta
+      name="theme-color"
+      content="#020817"
+      media="(prefers-color-scheme: dark)"
+    />
 
     <meta
       name="viewport"
-      content="initial-scale=1, viewport-fit=cover, user-scalable=no"
+      content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover, user-scalable=no"
     />
     <title>uptask</title>
     <meta name="og:title" content="uptask" />
